crates/client/src/client/schema/snapshots/fuel_core_client__client__schema__block__tests__block_by_height_query_gql_output.snap
---
source: crates/client/src/client/schema/block.rs
expression: operation.query
---
query($height: U32) {
  block(height: $height) {
    version {
      __typename
      ... on Version {
        value
      }
    }
    id
    header {
      version {
        __typename
        ... on Version {
          value
        }
      }
      id
      daHeight
      consensusParametersVersion
      stateTransitionBytecodeVersion
      transactionsCount
      messageReceiptCount
      transactionsRoot
      messageOutboxRoot
      eventInboxRoot
      height
      prevRoot
      time
      applicationHash
    }
    consensus {
      __typename
      ... on Genesis {
        chainConfigHash
        coinsRoot
        contractsRoot
        messagesRoot
        transactionsRoot
      }
      ... on PoAConsensus {
        signature
      }
    }
    transactions {
      id
    }
  }
}
